--- a/coatcheck/struct.Tickets.html
+++ b/coatcheck/struct.Tickets.html
@@ -26,7 +26,7 @@
 
     <section class="sidebar">
         
-        <p class='location'><a href='index.html'>coatcheck</a></p><div class='block struct'><h2>Structs</h2><a class='struct ' href='struct.CoatCheck.html'>CoatCheck</a><a class='struct ' href='struct.GenericIter.html'>GenericIter</a><a class='struct ' href='struct.Ticket.html'>Ticket</a><a class='struct current' href='struct.Tickets.html'>Tickets</a></div>
+        <p class='location'><a href='index.html'>coatcheck</a></p><div class='block struct'><h2>Structs</h2><a class='struct ' href='struct.CoatCheck.html'>CoatCheck</a><a class='struct ' href='struct.Ticket.html'>Ticket</a><a class='struct current' href='struct.Tickets.html'>Tickets</a></div>
     </section>
 
     <nav class="sub">
