--- a/coatcheck/struct.CoatCheck.html
+++ b/coatcheck/struct.CoatCheck.html
@@ -26,7 +26,7 @@
 
     <section class="sidebar">
         
-        <p class='location'><a href='index.html'>coatcheck</a></p><div class='block struct'><h2>Structs</h2><a class='struct current' href='struct.CoatCheck.html'>CoatCheck</a><a class='struct ' href='struct.GenericIter.html'>GenericIter</a><a class='struct ' href='struct.Ticket.html'>Ticket</a><a class='struct ' href='struct.Tickets.html'>Tickets</a></div>
+        <p class='location'><a href='index.html'>coatcheck</a></p><div class='block struct'><h2>Structs</h2><a class='struct current' href='struct.CoatCheck.html'>CoatCheck</a><a class='struct ' href='struct.Ticket.html'>Ticket</a><a class='struct ' href='struct.Tickets.html'>Tickets</a></div>
     </section>
 
     <nav class="sub">
@@ -44,11 +44,11 @@
 <h1 class='fqn'><span class='in-band'>Struct <a href='index.html'>coatcheck</a>::<wbr><a class='struct' href=''>CoatCheck</a><wbr></span><span class='out-of-band'><span id='render-detail'>
             <a id="collapse-all" href="#">[-]
             </a>&nbsp;<a id="expand-all" href="#">[+]</a>
-        </span><a id='src-767' href='../src/coatcheck/lib.rs.html#291-296'>[src]</a></span></h1>
+        </span><a id='src-767' href='../src/coatcheck/lib.rs.html#296-301'>[src]</a></span></h1>
 <pre class='rust struct'>pub struct CoatCheck&lt;V&gt; {
     // some fields omitted
-}</pre><h2 id='methods'>Methods</h2><h3 class='impl'><a class='stability Unmarked' title='No stability level'></a><code>impl&lt;V&gt; <a class='struct' href='../coatcheck/struct.CoatCheck.html' title='coatcheck::CoatCheck'>CoatCheck</a>&lt;V&gt;</code></h3><div class='docblock'><p>A data structure storing values indexed by tickets.</p>
-</div><div class='impl-items'><h4 id='method.new' class='method'><a class='stability Unmarked' title='No stability level'></a><code>fn <a href='#method.new' class='fnname'>new</a>() -&gt; <a class='struct' href='../coatcheck/struct.CoatCheck.html' title='coatcheck::CoatCheck'>CoatCheck</a>&lt;V&gt;</code></h4>
+}</pre><div class='docblock'><p>A data structure storing values indexed by tickets.</p>
+</div><h2 id='methods'>Methods</h2><h3 class='impl'><a class='stability Unmarked' title='No stability level'></a><code>impl&lt;V&gt; <a class='struct' href='../coatcheck/struct.CoatCheck.html' title='coatcheck::CoatCheck'>CoatCheck</a>&lt;V&gt;</code></h3><div class='impl-items'><h4 id='method.new' class='method'><a class='stability Unmarked' title='No stability level'></a><code>fn <a href='#method.new' class='fnname'>new</a>() -&gt; <a class='struct' href='../coatcheck/struct.CoatCheck.html' title='coatcheck::CoatCheck'>CoatCheck</a>&lt;V&gt;</code></h4>
 <div class='docblock'><p>Constructs a new, empty <code>CoatCheck&lt;T&gt;</code>.</p>
 
 <p>The coat check will not allocate until elements are pushed onto it.</p>
@@ -158,11 +158,11 @@ claim values from this CoatCheck.</p>
 
 <p><em>Warning:</em> If you don&#39;t take your tickets (collect them from the iterator), you&#39;re items
 won&#39;t be checked.</p>
-</div><h4 id='method.iter' class='method'><a class='stability Unmarked' title='No stability level'></a><code>fn <a href='#method.iter' class='fnname'>iter</a>&lt;'a&gt;(&amp;'a self) -&gt; <a class='type' href='../coatcheck/type.Iter.html' title='coatcheck::Iter'>Iter</a>&lt;'a, V&gt;</code></h4>
+</div><h4 id='method.iter' class='method'><a class='stability Unmarked' title='No stability level'></a><code>fn <a href='#method.iter' class='fnname'>iter</a>&lt;'a&gt;(&amp;'a self) -&gt; Iter&lt;'a, V&gt;</code></h4>
 <div class='docblock'><p>Iterate over the items in this <code>CoatCheck&lt;V&gt;</code>.</p>
-</div><h4 id='method.iter_mut' class='method'><a class='stability Unmarked' title='No stability level'></a><code>fn <a href='#method.iter_mut' class='fnname'>iter_mut</a>&lt;'a&gt;(&amp;'a mut self) -&gt; <a class='type' href='../coatcheck/type.IterMut.html' title='coatcheck::IterMut'>IterMut</a>&lt;'a, V&gt;</code></h4>
+</div><h4 id='method.iter_mut' class='method'><a class='stability Unmarked' title='No stability level'></a><code>fn <a href='#method.iter_mut' class='fnname'>iter_mut</a>&lt;'a&gt;(&amp;'a mut self) -&gt; IterMut&lt;'a, V&gt;</code></h4>
 <div class='docblock'><p>Mutably iterate over the items in this <code>CoatCheck&lt;V&gt;</code>.</p>
-</div><h4 id='method.into_iter' class='method'><a class='stability Unmarked' title='No stability level'></a><code>fn <a href='#method.into_iter' class='fnname'>into_iter</a>(self) -&gt; <a class='type' href='../coatcheck/type.IntoIter.html' title='coatcheck::IntoIter'>IntoIter</a>&lt;V&gt;</code></h4>
+</div><h4 id='method.into_iter' class='method'><a class='stability Unmarked' title='No stability level'></a><code>fn <a href='#method.into_iter' class='fnname'>into_iter</a>(self) -&gt; IntoIter&lt;V&gt;</code></h4>
 <div class='docblock'><p>Creates a consuming iterator, that is, one that moves each value out of the coat check (from
 start to end). The coat check cannot be used after calling this.</p>
 </div><h4 id='method.contains_ticket' class='method'><a class='stability Unmarked' title='No stability level'></a><code>fn <a href='#method.contains_ticket' class='fnname'>contains_ticket</a>(&amp;self, ticket: &amp;<a class='struct' href='../coatcheck/struct.Ticket.html' title='coatcheck::Ticket'>Ticket</a>) -&gt; <a href='http://doc.rust-lang.org/nightly/std/primitive.bool.html'>bool</a></code></h4>
