--- a/src/coatcheck/lib.rs.html
+++ b/src/coatcheck/lib.rs.html
@@ -692,23 +692,27 @@
 <span id="650">650</span>
 <span id="651">651</span>
 <span id="652">652</span>
+<span id="653">653</span>
+<span id="654">654</span>
+<span id="655">655</span>
+<span id="656">656</span>
 </pre><pre class='rust '>
 <span class='doccomment'>//! # CoatCheck</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! CoatCheck is a library for storing values and referencing them by &quot;handles&quot;</span>
 <span class='doccomment'>//! (`Tickets`). This library is primarily designed for when one needs to be able</span>
 <span class='doccomment'>//! to &quot;register&quot; an object with a system and refer to it after registration but</span>
 <span class='doccomment'>//! one doesn&#39;t need to actually access the object.</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! ## Explanation by example</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! For example, let&#39;s say you were implementing a callback system:</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! ```rust</span>
 <span class='doccomment'>//! struct System {</span>
 <span class='doccomment'>//!     callbacks: Vec&lt;Box&lt;FnMut() + &#39;static&gt;&gt;,</span>
 <span class='doccomment'>//! }</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! impl System {</span>
 <span class='doccomment'>//!     fn add_callback&lt;C&gt;(&amp;mut self, cb: C) where C: FnMut() + &#39;static {</span>
 <span class='doccomment'>//!         self.callbacks.push(Box::new(cb));</span>
@@ -720,10 +724,10 @@
 <span class='doccomment'>//!     }</span>
 <span class='doccomment'>//! }</span>
 <span class='doccomment'>//! ```</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! This system works but doesn&#39;t allow unregistering. If you wanted to allow</span>
 <span class='doccomment'>//! unregistering individual callbacks, you could do something like:</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! ```rust</span>
 <span class='doccomment'>//! use std::collections::HashMap;</span>
 <span class='doccomment'>//!</span>
@@ -735,7 +739,7 @@
 <span class='doccomment'>//! struct Handle {</span>
 <span class='doccomment'>//!     id: usize,</span>
 <span class='doccomment'>//! }</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! impl System {</span>
 <span class='doccomment'>//!     fn add_callback&lt;C&gt;(&amp;mut self, cb: C) -&gt; Handle where C: FnMut() + &#39;static {</span>
 <span class='doccomment'>//!         let id = self.next_id;</span>
@@ -753,23 +757,23 @@
 <span class='doccomment'>//!     }</span>
 <span class='doccomment'>//! }</span>
 <span class='doccomment'>//! ```</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! However, this is kind of an abuse of a hash table.</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! This is where this library comes in. It acts like the above system *but* takes advantage of the</span>
 <span class='doccomment'>//! fact that it can choose the IDs:</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! ```rust</span>
 <span class='doccomment'>//! use coatcheck::{CoatCheck, Ticket};</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! struct System {</span>
 <span class='doccomment'>//!     callbacks: CoatCheck&lt;Box&lt;FnMut() + &#39;static&gt;&gt;,</span>
 <span class='doccomment'>//! }</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! struct Handle {</span>
 <span class='doccomment'>//!     ticket: Ticket, // Wrap it for type safety</span>
 <span class='doccomment'>//! }</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! impl System {</span>
 <span class='doccomment'>//!     fn add_callback&lt;C&gt;(&amp;mut self, cb: C) -&gt; Handle where C: FnMut() + &#39;static {</span>
 <span class='doccomment'>//!         Handle { ticket: self.callbacks.check(Box::new(cb)) }</span>
@@ -784,11 +788,11 @@
 <span class='doccomment'>//!     }</span>
 <span class='doccomment'>//! }</span>
 <span class='doccomment'>//! ```</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! ## Discussion</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! One thing you might note when using this library is that Tickets can&#39;t be duplicated in any way.</span>
-<span class='doccomment'>//! </span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//! Pros:</span>
 <span class='doccomment'>//!  * Ownership: Preventing duplication of the ticket preserves ownership of the</span>
 <span class='doccomment'>//!    value to an extent. The value can still be stolen by destroying the</span>
@@ -925,6 +929,7 @@
 
 }
 
+<span class='attribute'>#[<span class='ident'>doc</span>(<span class='ident'>hidden</span>)]</span>
 <span class='kw'>struct</span> <span class='ident'>GenericIter</span><span class='op'>&lt;</span><span class='ident'>V</span>, <span class='ident'>I</span><span class='op'>&gt;</span> <span class='kw'>where</span> <span class='ident'>I</span>: <span class='ident'>Iterator</span><span class='op'>&lt;</span><span class='ident'>Item</span><span class='op'>=</span><span class='ident'>V</span><span class='op'>&gt;</span> {
     <span class='ident'>inner</span>: <span class='ident'>I</span>,
     <span class='ident'>remaining</span>: <span class='ident'>usize</span>,
@@ -965,24 +970,28 @@
     }
 }
 
+<span class='attribute'>#[<span class='ident'>doc</span>(<span class='ident'>hidden</span>)]</span>
 <span class='kw'>pub</span> <span class='kw'>type</span> <span class='ident'>IntoIter</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span>    <span class='op'>=</span> <span class='ident'>GenericIter</span><span class='op'>&lt;</span><span class='ident'>V</span>,
                                       <span class='ident'>iter</span>::<span class='ident'>FilterMap</span><span class='op'>&lt;</span><span class='ident'>Entry</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span>,
                                                       <span class='ident'>V</span>,
                                                       <span class='ident'>vec</span>::<span class='ident'>IntoIter</span><span class='op'>&lt;</span><span class='ident'>Entry</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;&gt;</span>,
                                       <span class='kw'>fn</span>(<span class='ident'>Entry</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Option</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;&gt;</span><span class='op'>&gt;</span>;
 
+<span class='attribute'>#[<span class='ident'>doc</span>(<span class='ident'>hidden</span>)]</span>
 <span class='kw'>pub</span> <span class='kw'>type</span> <span class='ident'>Iter</span><span class='op'>&lt;</span><span class='lifetime'>&#39;a</span>, <span class='ident'>V</span><span class='op'>&gt;</span>    <span class='op'>=</span> <span class='ident'>GenericIter</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> <span class='ident'>V</span>,
                                       <span class='ident'>iter</span>::<span class='ident'>FilterMap</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> <span class='ident'>Entry</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span>,
                                                       <span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> <span class='ident'>V</span>,
                                                       <span class='ident'>slice</span>::<span class='ident'>Iter</span><span class='op'>&lt;</span><span class='lifetime'>&#39;a</span>, <span class='ident'>Entry</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;&gt;</span>,
                                       <span class='kw'>fn</span>(<span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> <span class='ident'>Entry</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Option</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> <span class='ident'>V</span><span class='op'>&gt;&gt;</span><span class='op'>&gt;</span>;
 
+<span class='attribute'>#[<span class='ident'>doc</span>(<span class='ident'>hidden</span>)]</span>
 <span class='kw'>pub</span> <span class='kw'>type</span> <span class='ident'>IterMut</span><span class='op'>&lt;</span><span class='lifetime'>&#39;a</span>, <span class='ident'>V</span><span class='op'>&gt;</span> <span class='op'>=</span> <span class='ident'>GenericIter</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> <span class='kw-2'>mut</span> <span class='ident'>V</span>,
                                       <span class='ident'>iter</span>::<span class='ident'>FilterMap</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> <span class='kw-2'>mut</span> <span class='ident'>Entry</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span>,
                                                       <span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> <span class='kw-2'>mut</span> <span class='ident'>V</span>,
                                                       <span class='ident'>slice</span>::<span class='ident'>IterMut</span><span class='op'>&lt;</span><span class='lifetime'>&#39;a</span>, <span class='ident'>Entry</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;&gt;</span>,
                                       <span class='kw'>fn</span>(<span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> <span class='kw-2'>mut</span> <span class='ident'>Entry</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Option</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='lifetime'>&#39;a</span> <span class='kw-2'>mut</span> <span class='ident'>V</span><span class='op'>&gt;&gt;</span><span class='op'>&gt;</span>;
 
+<span class='doccomment'>/// A data structure storing values indexed by tickets.</span>
 <span class='kw'>pub</span> <span class='kw'>struct</span> <span class='ident'>CoatCheck</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span> {
     <span class='ident'>tag</span>: <span class='ident'>usize</span>,
     <span class='ident'>data</span>: <span class='ident'>Vec</span><span class='op'>&lt;</span><span class='ident'>Entry</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;&gt;</span>,
@@ -990,7 +999,6 @@
     <span class='ident'>next_free</span>: <span class='ident'>usize</span>,
 }
 
-<span class='doccomment'>/// A data structure storing values indexed by tickets.</span>
 <span class='kw'>impl</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span> <span class='ident'>CoatCheck</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span> {
     <span class='doccomment'>/// Constructs a new, empty `CoatCheck&lt;T&gt;`.</span>
     <span class='doccomment'>///</span>
@@ -1182,7 +1190,7 @@
     <span class='doccomment'>/// start to end). The coat check cannot be used after calling this.</span>
     <span class='attribute'>#[<span class='ident'>inline</span>]</span>
     <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>into_iter</span>(<span class='self'>self</span>) <span class='op'>-&gt;</span> <span class='ident'>IntoIter</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span> {
-        <span class='ident'>IntoIter</span> { 
+        <span class='ident'>IntoIter</span> {
             <span class='ident'>remaining</span>: <span class='self'>self</span>.<span class='ident'>len</span>(),
             <span class='ident'>inner</span>: <span class='self'>self</span>.<span class='ident'>data</span>.<span class='ident'>into_iter</span>().<span class='ident'>filter_map</span>(<span class='ident'>Entry</span>::<span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span>::<span class='ident'>full</span> <span class='kw'>as</span> <span class='kw'>fn</span>(<span class='ident'>Entry</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Option</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span>)
         }
