--- a/src/coatcheck/lib.rs.html
+++ b/src/coatcheck/lib.rs.html
@@ -721,6 +721,21 @@
 <span id="679">679</span>
 <span id="680">680</span>
 <span id="681">681</span>
+<span id="682">682</span>
+<span id="683">683</span>
+<span id="684">684</span>
+<span id="685">685</span>
+<span id="686">686</span>
+<span id="687">687</span>
+<span id="688">688</span>
+<span id="689">689</span>
+<span id="690">690</span>
+<span id="691">691</span>
+<span id="692">692</span>
+<span id="693">693</span>
+<span id="694">694</span>
+<span id="695">695</span>
+<span id="696">696</span>
 </pre><pre class='rust '>
 <span class='doccomment'>//! # CoatCheck</span>
 <span class='doccomment'>//!</span>
@@ -1317,7 +1332,7 @@
     <span class='kw'>use</span> <span class='self'>self</span>::<span class='ident'>test</span>::<span class='ident'>Bencher</span>;
 
     <span class='attribute'>#[<span class='ident'>test</span>]</span>
-    <span class='kw'>fn</span> <span class='ident'>main</span>() {
+    <span class='kw'>fn</span> <span class='ident'>two_cc</span>() {
         <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>c1</span> <span class='op'>=</span> <span class='ident'>CoatCheck</span>::<span class='ident'>new</span>();
         <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>c2</span> <span class='op'>=</span> <span class='ident'>CoatCheck</span>::<span class='ident'>new</span>();
 
@@ -1335,30 +1350,45 @@
 
         <span class='macro'>assert</span><span class='macro'>!</span>(<span class='ident'>c2</span>.<span class='ident'>claim</span>(<span class='ident'>t2</span>).<span class='ident'>is_err</span>());
         <span class='macro'>assert</span><span class='macro'>!</span>(<span class='ident'>c1</span>.<span class='ident'>claim</span>(<span class='ident'>t4</span>).<span class='ident'>is_err</span>());
-        <span class='macro'>println</span><span class='macro'>!</span>(<span class='string'>&quot;{:?}&quot;</span>, <span class='ident'>c2</span>);
+    }
 
+    <span class='attribute'>#[<span class='ident'>test</span>]</span>
+    <span class='kw'>fn</span> <span class='ident'>iter</span>() {
+        <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>cc</span> <span class='op'>=</span> <span class='ident'>CoatCheck</span>::<span class='ident'>new</span>();
+        <span class='ident'>cc</span>.<span class='ident'>check_all</span>(<span class='number'>0</span>..<span class='number'>2</span>).<span class='ident'>count</span>();
         {
-            <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>iter</span> <span class='op'>=</span> <span class='ident'>c2</span>.<span class='ident'>iter</span>();
-            <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>iter</span>.<span class='ident'>next</span>().<span class='ident'>cloned</span>(), <span class='prelude-val'>Some</span>(<span class='number'>4</span>));
-            <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>iter</span>.<span class='ident'>next</span>().<span class='ident'>cloned</span>(), <span class='prelude-val'>Some</span>(<span class='number'>5</span>));
+            <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>iter</span> <span class='op'>=</span> <span class='ident'>cc</span>.<span class='ident'>iter</span>();
+            <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>iter</span>.<span class='ident'>next</span>().<span class='ident'>cloned</span>(), <span class='prelude-val'>Some</span>(<span class='number'>0</span>));
+            <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>iter</span>.<span class='ident'>next</span>().<span class='ident'>cloned</span>(), <span class='prelude-val'>Some</span>(<span class='number'>1</span>));
             <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>iter</span>.<span class='ident'>next</span>(), <span class='prelude-val'>None</span>);
         }
 
         {
-            <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>iter</span> <span class='op'>=</span> <span class='ident'>c2</span>.<span class='ident'>iter_mut</span>();
-            <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>iter</span>.<span class='ident'>next</span>().<span class='ident'>cloned</span>(), <span class='prelude-val'>Some</span>(<span class='number'>4</span>));
+            <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>iter</span> <span class='op'>=</span> <span class='ident'>cc</span>.<span class='ident'>iter_mut</span>();
+            <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>iter</span>.<span class='ident'>next</span>().<span class='ident'>cloned</span>(), <span class='prelude-val'>Some</span>(<span class='number'>0</span>));
             <span class='kw'>let</span> <span class='ident'>it</span> <span class='op'>=</span> <span class='ident'>iter</span>.<span class='ident'>next</span>().<span class='ident'>unwrap</span>();
-            <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>it</span>, <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='number'>5</span>);
-            <span class='op'>*</span><span class='ident'>it</span> <span class='op'>=</span> <span class='number'>6</span>;
+            <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>it</span>, <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='number'>1</span>);
+            <span class='op'>*</span><span class='ident'>it</span> <span class='op'>=</span> <span class='number'>2</span>;
             <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>iter</span>.<span class='ident'>next</span>(), <span class='prelude-val'>None</span>);
         }
 
         {
-            <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>iter</span> <span class='op'>=</span> <span class='ident'>c2</span>.<span class='ident'>into_iter</span>();
-            <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>iter</span>.<span class='ident'>next</span>(), <span class='prelude-val'>Some</span>(<span class='number'>4</span>));
-            <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>iter</span>.<span class='ident'>next</span>(), <span class='prelude-val'>Some</span>(<span class='number'>6</span>));
+            <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>iter</span> <span class='op'>=</span> <span class='ident'>cc</span>.<span class='ident'>into_iter</span>();
+            <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>iter</span>.<span class='ident'>next</span>(), <span class='prelude-val'>Some</span>(<span class='number'>0</span>));
+            <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>iter</span>.<span class='ident'>next</span>(), <span class='prelude-val'>Some</span>(<span class='number'>2</span>));
             <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>iter</span>.<span class='ident'>next</span>(), <span class='prelude-val'>None</span>)
         }
+    }
+
+    <span class='attribute'>#[<span class='ident'>test</span>]</span>
+    <span class='kw'>fn</span> <span class='ident'>get</span>() {
+        <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>cc</span> <span class='op'>=</span> <span class='ident'>CoatCheck</span>::<span class='ident'>new</span>();
+        <span class='kw'>let</span> <span class='ident'>tickets</span>: <span class='ident'>Vec</span><span class='op'>&lt;</span><span class='ident'>Ticket</span><span class='op'>&gt;</span> <span class='op'>=</span> <span class='ident'>cc</span>.<span class='ident'>check_all</span>(<span class='number'>0</span>..<span class='number'>10</span>).<span class='ident'>collect</span>();
+        <span class='kw'>for</span> (<span class='ident'>i</span>, <span class='ident'>t</span>) <span class='kw'>in</span> <span class='ident'>tickets</span>.<span class='ident'>iter</span>().<span class='ident'>enumerate</span>() {
+            <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>cc</span>[<span class='op'>*</span><span class='ident'>t</span>], <span class='ident'>i</span>);
+        }
+        <span class='ident'>cc</span>[<span class='ident'>tickets</span>[<span class='number'>2</span>]] <span class='op'>=</span> <span class='number'>1</span>;
+        <span class='macro'>assert_eq</span><span class='macro'>!</span>(<span class='ident'>cc</span>[<span class='ident'>tickets</span>[<span class='number'>2</span>]], <span class='number'>1</span>);
     }
 
     <span class='attribute'>#[<span class='ident'>test</span>]</span>
@@ -1375,7 +1405,7 @@
     }
 
     <span class='attribute'>#[<span class='ident'>bench</span>]</span>
-    <span class='kw'>fn</span> <span class='ident'>hash_map_grow</span>(<span class='ident'>b</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>Bencher</span>) {
+    <span class='kw'>fn</span> <span class='ident'>bench_hash_map</span>(<span class='ident'>b</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>Bencher</span>) {
         <span class='ident'>b</span>.<span class='ident'>iter</span>(<span class='op'>||</span> {
             <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>map</span> <span class='op'>=</span> <span class='ident'>HashMap</span>::<span class='ident'>new</span>();
             <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>res</span> <span class='op'>=</span> <span class='ident'>Vec</span>::<span class='ident'>with_capacity</span>(<span class='number'>10</span>);
@@ -1390,7 +1420,7 @@
     }
 
     <span class='attribute'>#[<span class='ident'>bench</span>]</span>
-    <span class='kw'>fn</span> <span class='ident'>coat_check_grow</span>(<span class='ident'>b</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>Bencher</span>) {
+    <span class='kw'>fn</span> <span class='ident'>bench_coat_check</span>(<span class='ident'>b</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>Bencher</span>) {
         <span class='ident'>b</span>.<span class='ident'>iter</span>(<span class='op'>||</span> {
             <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>cc</span> <span class='op'>=</span> <span class='ident'>CoatCheck</span>::<span class='ident'>new</span>();
             <span class='kw'>let</span> <span class='kw-2'>mut</span> <span class='ident'>res</span> <span class='op'>=</span> <span class='ident'>Vec</span>::<span class='ident'>with_capacity</span>(<span class='number'>10</span>);
@@ -1398,7 +1428,7 @@
                 <span class='ident'>res</span>.<span class='ident'>push</span>(<span class='ident'>cc</span>.<span class='ident'>check</span>(<span class='string'>&quot;something&quot;</span>));
             }
             <span class='kw'>for</span> <span class='ident'>t</span> <span class='kw'>in</span> <span class='ident'>res</span>.<span class='ident'>into_iter</span>() {
-                <span class='ident'>cc</span>.<span class='ident'>claim</span>(<span class='ident'>t</span>);
+                <span class='kw'>let</span> _ <span class='op'>=</span> <span class='ident'>cc</span>.<span class='ident'>claim</span>(<span class='ident'>t</span>);
             }
         });
     }
