--- a/src/coatcheck/lib.rs.html
+++ b/src/coatcheck/lib.rs.html
@@ -740,6 +740,10 @@
 <span id="698">698</span>
 <span id="699">699</span>
 <span id="700">700</span>
+<span id="701">701</span>
+<span id="702">702</span>
+<span id="703">703</span>
+<span id="704">704</span>
 </pre><pre class='rust '>
 <span class='doccomment'>//! # CoatCheck</span>
 <span class='doccomment'>//!</span>
@@ -841,13 +845,17 @@
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! One thing you might note when using this library is that Tickets can&#39;t be duplicated in any way.</span>
 <span class='doccomment'>//!</span>
-<span class='doccomment'>//! Pros:</span>
+<span class='doccomment'>//! ### Pros:</span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//!  * Ownership: Preventing duplication of the ticket preserves ownership of the</span>
 <span class='doccomment'>//!    value to an extent. The value can still be stolen by destroying the</span>
 <span class='doccomment'>//!    CoatCheck but that&#39;s the only way to get it out without the ticket.</span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//!  * Safety: As long as you use the ticket in the right coat check, the index</span>
 <span class='doccomment'>//!    operator will never panic.</span>
-<span class='doccomment'>//! Cons:</span>
+<span class='doccomment'>//!</span>
+<span class='doccomment'>//! ### Cons:</span>
+<span class='doccomment'>//!</span>
 <span class='doccomment'>//!  * Multiple references: There&#39;s no way to give away a reference to a value</span>
 <span class='doccomment'>//!    (without using actual references, that is).</span>
 
