--- a/src/coatcheck/lib.rs.html
+++ b/src/coatcheck/lib.rs.html
@@ -744,6 +744,11 @@
 <span id="702">702</span>
 <span id="703">703</span>
 <span id="704">704</span>
+<span id="705">705</span>
+<span id="706">706</span>
+<span id="707">707</span>
+<span id="708">708</span>
+<span id="709">709</span>
 </pre><pre class='rust '>
 <span class='doccomment'>//! # CoatCheck</span>
 <span class='doccomment'>//!</span>
@@ -853,6 +858,11 @@
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//!  * Safety: As long as you use the ticket in the right coat check, the index</span>
 <span class='doccomment'>//!    operator will never panic.</span>
+<span class='doccomment'>//!  </span>
+<span class='doccomment'>//!  * Size: If I allowed ticket copying, I&#39;d need to store a &quot;generation&quot; in every ticket and</span>
+<span class='doccomment'>//!    along side the ticket&#39;s associated value to be able to distinguish between an old ticket and</span>
+<span class='doccomment'>//!    a new one. Currently, I can get away with reusing tickets because they must be turned in</span>
+<span class='doccomment'>//!    before freeing a slot.</span>
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! ### Cons:</span>
 <span class='doccomment'>//!</span>
