--- a/src/coatcheck/lib.rs.html
+++ b/src/coatcheck/lib.rs.html
@@ -773,6 +773,7 @@
 <span id="731">731</span>
 <span id="732">732</span>
 <span id="733">733</span>
+<span id="734">734</span>
 </pre><pre class='rust '>
 <span class='doccomment'>//! # CoatCheck</span>
 <span class='doccomment'>//!</span>
@@ -783,7 +784,8 @@
 <span class='doccomment'>//! ## Advantages over a hash table:</span>
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! 1. You don&#39;t have to generate your keys.</span>
-<span class='doccomment'>//! 2. CoatCheck is at least 5x faster than the stdlib HashTable.</span>
+<span class='doccomment'>//! 2. CoatCheck is at least 5x faster than the stdlib HashTable for insert/remove operations.</span>
+<span class='doccomment'>//! 3. CoatCheck is about 40x faster for lookup operations.</span>
 <span class='doccomment'>//!</span>
 <span class='doccomment'>//! ## Example</span>
 <span class='doccomment'>//!</span>
