Update docs for 233f0aaf3b42ef265bf24801002cd98ab2ae6e39
Return actual errors.

This is more versatile and makes things more debugable
(`result.unwrap()` will print a nice error message).

--- a/coatcheck/index.html
+++ b/coatcheck/index.html
@@ -44,7 +44,7 @@
 <h1 class='fqn'><span class='in-band'>Crate <a class='mod' href=''>coatcheck</a><wbr></span><span class='out-of-band'><a href='stability.html'>[stability]</a> <span id='render-detail'>
             <a id="collapse-all" href="#">[-]
             </a>&nbsp;<a id="expand-all" href="#">[+]</a>
-        </span><a id='src-0' href='../src/coatcheck/lib.rs.html#1-734'>[src]</a></span></h1>
+        </span><a id='src-0' href='../src/coatcheck/lib.rs.html#1-792'>[src]</a></span></h1>
 <div class='docblock'>
 <h1 id="coatcheck" class='section-header'><a
                            href="#coatcheck">CoatCheck</a></h1>
@@ -169,6 +169,20 @@ before freeing a slot.</p></li>
 </div><h2 id='structs' class='section-header'><a href="#structs">Structs</a></h2>
 <table>
                     <tr>
+                        <td><a class='stability Unmarked' title='No stability level'></a><a class='struct' href='struct.AccessError.html'
+                               title='coatcheck::AccessError'>AccessError</a></td>
+                        <td class='docblock short'><p>The error yielded an access fails.</p>
+</td>
+                    </tr>
+                
+                    <tr>
+                        <td><a class='stability Unmarked' title='No stability level'></a><a class='struct' href='struct.ClaimError.html'
+                               title='coatcheck::ClaimError'>ClaimError</a></td>
+                        <td class='docblock short'><p>The error yielded when a claim fails.</p>
+</td>
+                    </tr>
+                
+                    <tr>
                         <td><a class='stability Unmarked' title='No stability level'></a><a class='struct' href='struct.CoatCheck.html'
                                title='coatcheck::CoatCheck'>CoatCheck</a></td>
                         <td class='docblock short'><p>A data structure storing values indexed by tickets.</p>
@@ -186,6 +200,14 @@ before freeing a slot.</p></li>
                         <td><a class='stability Unmarked' title='No stability level'></a><a class='struct' href='struct.Tickets.html'
                                title='coatcheck::Tickets'>Tickets</a></td>
                         <td class='docblock short'></td>
+                    </tr>
+                </table><h2 id='enums' class='section-header'><a href="#enums">Enums</a></h2>
+<table>
+                    <tr>
+                        <td><a class='stability Unmarked' title='No stability level'></a><a class='enum' href='enum.ErrorKind.html'
+                               title='coatcheck::ErrorKind'>ErrorKind</a></td>
+                        <td class='docblock short'><p>Coat check error types</p>
+</td>
                     </tr>
                 </table></section>
     <section id='search' class="content hidden"></section>
