--- a/coatcheck/struct.Tickets.html
+++ b/coatcheck/struct.Tickets.html
@@ -26,7 +26,7 @@
 
     <section class="sidebar">
         
-        <p class='location'><a href='index.html'>coatcheck</a></p><div class='block struct'><h2>Structs</h2><a class='struct ' href='struct.CoatCheck.html'>CoatCheck</a><a class='struct ' href='struct.Ticket.html'>Ticket</a><a class='struct current' href='struct.Tickets.html'>Tickets</a></div>
+        <p class='location'><a href='index.html'>coatcheck</a></p><div class='block struct'><h2>Structs</h2><a class='struct ' href='struct.AccessError.html'>AccessError</a><a class='struct ' href='struct.ClaimError.html'>ClaimError</a><a class='struct ' href='struct.CoatCheck.html'>CoatCheck</a><a class='struct ' href='struct.Ticket.html'>Ticket</a><a class='struct current' href='struct.Tickets.html'>Tickets</a></div><div class='block enum'><h2>Enums</h2><a class='enum ' href='enum.ErrorKind.html'>ErrorKind</a></div>
     </section>
 
     <nav class="sub">
@@ -44,7 +44,7 @@
 <h1 class='fqn'><span class='in-band'>Struct <a href='index.html'>coatcheck</a>::<wbr><a class='struct' href=''>Tickets</a><wbr></span><span class='out-of-band'><span id='render-detail'>
             <a id="collapse-all" href="#">[-]
             </a>&nbsp;<a id="expand-all" href="#">[+]</a>
-        </span><a id='src-271' href='../src/coatcheck/lib.rs.html#211-214'>[src]</a></span></h1>
+        </span><a id='src-475' href='../src/coatcheck/lib.rs.html#269-272'>[src]</a></span></h1>
 <pre class='rust struct'>pub struct Tickets&lt;'a, I, V&gt; <span class='where'>where I: <a class='trait' href='http://doc.rust-lang.org/nightly/core/iter/trait.Iterator.html' title='core::iter::Iterator'>Iterator</a>&lt;Item=V&gt;, V: 'a</span> {
     // some fields omitted
 }</pre><h2 id='implementations'>Trait Implementations</h2><h3 class='impl'><a class='stability Stable' title='Stable'></a><code>impl&lt;'a, I, V&gt; <a class='trait' href='http://doc.rust-lang.org/nightly/core/iter/trait.Iterator.html' title='core::iter::Iterator'>Iterator</a> for <a class='struct' href='../coatcheck/struct.Tickets.html' title='coatcheck::Tickets'>Tickets</a>&lt;'a, I, V&gt; <span class='where'>where I: <a class='trait' href='http://doc.rust-lang.org/nightly/core/iter/trait.Iterator.html' title='core::iter::Iterator'>Iterator</a>&lt;Item=V&gt;, V: 'a</span></code></h3><div class='impl-items'><h4 id='assoc_type.Item' class='type'><a class='stability Unmarked' title='No stability level'></a><code>type Item = <a class='struct' href='../coatcheck/struct.Ticket.html' title='coatcheck::Ticket'>Ticket</a></code></h4>
