--- a/src/coatcheck/lib.rs.html
+++ b/src/coatcheck/lib.rs.html
@@ -774,6 +774,64 @@
 <span id="732">732</span>
 <span id="733">733</span>
 <span id="734">734</span>
+<span id="735">735</span>
+<span id="736">736</span>
+<span id="737">737</span>
+<span id="738">738</span>
+<span id="739">739</span>
+<span id="740">740</span>
+<span id="741">741</span>
+<span id="742">742</span>
+<span id="743">743</span>
+<span id="744">744</span>
+<span id="745">745</span>
+<span id="746">746</span>
+<span id="747">747</span>
+<span id="748">748</span>
+<span id="749">749</span>
+<span id="750">750</span>
+<span id="751">751</span>
+<span id="752">752</span>
+<span id="753">753</span>
+<span id="754">754</span>
+<span id="755">755</span>
+<span id="756">756</span>
+<span id="757">757</span>
+<span id="758">758</span>
+<span id="759">759</span>
+<span id="760">760</span>
+<span id="761">761</span>
+<span id="762">762</span>
+<span id="763">763</span>
+<span id="764">764</span>
+<span id="765">765</span>
+<span id="766">766</span>
+<span id="767">767</span>
+<span id="768">768</span>
+<span id="769">769</span>
+<span id="770">770</span>
+<span id="771">771</span>
+<span id="772">772</span>
+<span id="773">773</span>
+<span id="774">774</span>
+<span id="775">775</span>
+<span id="776">776</span>
+<span id="777">777</span>
+<span id="778">778</span>
+<span id="779">779</span>
+<span id="780">780</span>
+<span id="781">781</span>
+<span id="782">782</span>
+<span id="783">783</span>
+<span id="784">784</span>
+<span id="785">785</span>
+<span id="786">786</span>
+<span id="787">787</span>
+<span id="788">788</span>
+<span id="789">789</span>
+<span id="790">790</span>
+<span id="791">791</span>
+<span id="792">792</span>
 </pre><pre class='rust '>
 <span class='doccomment'>//! # CoatCheck</span>
 <span class='doccomment'>//!</span>
@@ -906,6 +964,8 @@
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>num</span>::<span class='ident'>Int</span>;
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>mem</span>;
 <span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>iter</span>::<span class='ident'>RandomAccessIterator</span>;
+<span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>error</span>;
+<span class='kw'>use</span> <span class='ident'>std</span>::<span class='ident'>error</span>::<span class='ident'>Error</span> <span class='kw'>as</span> <span class='ident'>ErrorTrait</span>;
 <span class='kw'>use</span> <span class='ident'>Entry</span>::<span class='op'>*</span>;
 
 <span class='kw'>enum</span> <span class='ident'>Entry</span><span class='op'>&lt;</span><span class='ident'>V</span><span class='op'>&gt;</span> {
@@ -982,6 +1042,62 @@
 <span class='kw'>impl</span> <span class='ident'>fmt</span>::<span class='ident'>Show</span> <span class='kw'>for</span> <span class='ident'>Ticket</span> {
     <span class='kw'>fn</span> <span class='ident'>fmt</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>f</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>fmt</span>::<span class='ident'>Formatter</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span>(), <span class='ident'>fmt</span>::<span class='ident'>Error</span><span class='op'>&gt;</span> {
         <span class='macro'>write</span><span class='macro'>!</span>(<span class='ident'>f</span>, <span class='string'>&quot;Ticket&quot;</span>)
+    }
+}
+
+<span class='doccomment'>/// Coat check error types</span>
+<span class='attribute'>#[<span class='ident'>derive</span>(<span class='ident'>Copy</span>)]</span>
+<span class='kw'>pub</span> <span class='kw'>enum</span> <span class='ident'>ErrorKind</span> {
+    <span class='ident'>WrongCoatCheck</span>,
+}
+
+<span class='kw'>impl</span> <span class='ident'>ErrorKind</span> {
+    <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>description</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>) <span class='op'>-&gt;</span> <span class='kw-2'>&amp;</span><span class='ident'>str</span> {
+        <span class='kw'>match</span> <span class='self'>self</span> {
+            <span class='kw-2'>&amp;</span><span class='ident'>ErrorKind</span>::<span class='ident'>WrongCoatCheck</span> <span class='op'>=&gt;</span> <span class='string'>&quot;Ticket used in the wrong coat check&quot;</span>
+        }
+    }
+}
+
+<span class='doccomment'>/// The error yielded when a claim fails.</span>
+<span class='kw'>pub</span> <span class='kw'>struct</span> <span class='ident'>ClaimError</span> {
+    <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>,
+    <span class='ident'>ticket</span>: <span class='ident'>Ticket</span>,
+}
+
+<span class='kw'>impl</span> <span class='ident'>error</span>::<span class='ident'>Error</span> <span class='kw'>for</span> <span class='ident'>ClaimError</span> {
+    <span class='kw'>fn</span> <span class='ident'>description</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>) <span class='op'>-&gt;</span> <span class='kw-2'>&amp;</span><span class='ident'>str</span> {
+        <span class='self'>self</span>.<span class='ident'>kind</span>.<span class='ident'>description</span>()
+    }
+}
+
+<span class='kw'>impl</span> <span class='ident'>fmt</span>::<span class='ident'>Display</span> <span class='kw'>for</span> <span class='ident'>ClaimError</span> {
+    <span class='kw'>fn</span> <span class='ident'>fmt</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>f</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>fmt</span>::<span class='ident'>Formatter</span>) <span class='op'>-&gt;</span> <span class='ident'>fmt</span>::<span class='prelude-ty'>Result</span> {
+        <span class='macro'>write</span><span class='macro'>!</span>(<span class='ident'>f</span>, <span class='string'>&quot;ClaimError: {}&quot;</span>, <span class='self'>self</span>.<span class='ident'>description</span>())
+    }
+}
+
+<span class='kw'>impl</span> <span class='ident'>error</span>::<span class='ident'>FromError</span><span class='op'>&lt;</span><span class='ident'>ClaimError</span><span class='op'>&gt;</span> <span class='kw'>for</span> <span class='ident'>Ticket</span> {
+    <span class='kw'>fn</span> <span class='ident'>from_error</span>(<span class='ident'>e</span>: <span class='ident'>ClaimError</span>) <span class='op'>-&gt;</span> <span class='ident'>Ticket</span> {
+        <span class='ident'>e</span>.<span class='ident'>ticket</span>
+    }
+}
+
+<span class='doccomment'>/// The error yielded an access fails.</span>
+<span class='attribute'>#[<span class='ident'>derive</span>(<span class='ident'>Copy</span>)]</span>
+<span class='kw'>pub</span> <span class='kw'>struct</span> <span class='ident'>AccessError</span> {
+    <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>,
+}
+
+<span class='kw'>impl</span> <span class='ident'>error</span>::<span class='ident'>Error</span> <span class='kw'>for</span> <span class='ident'>AccessError</span> {
+    <span class='kw'>fn</span> <span class='ident'>description</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>) <span class='op'>-&gt;</span> <span class='kw-2'>&amp;</span><span class='ident'>str</span> {
+        <span class='self'>self</span>.<span class='ident'>kind</span>.<span class='ident'>description</span>()
+    }
+}
+
+<span class='kw'>impl</span> <span class='ident'>fmt</span>::<span class='ident'>Display</span> <span class='kw'>for</span> <span class='ident'>AccessError</span> {
+    <span class='kw'>fn</span> <span class='ident'>fmt</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>f</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>fmt</span>::<span class='ident'>Formatter</span>) <span class='op'>-&gt;</span> <span class='ident'>fmt</span>::<span class='prelude-ty'>Result</span> {
+        <span class='macro'>write</span><span class='macro'>!</span>(<span class='ident'>f</span>, <span class='string'>&quot;AccessError: {}&quot;</span>, <span class='self'>self</span>.<span class='ident'>description</span>())
     }
 }
 
@@ -1300,9 +1416,9 @@
     <span class='doccomment'>///</span>
     <span class='doccomment'>/// Returns `Ok(value)` if the ticket belongs to this `CoatCheck&lt;V&gt;` (eating the ticket).</span>
     <span class='doccomment'>/// Returns `Err(ticket)` if the ticket belongs to another `CoatCheck&lt;V&gt;` (returning the ticket).</span>
-    <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>claim</span>(<span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='self'>self</span>, <span class='ident'>ticket</span>: <span class='ident'>Ticket</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span><span class='ident'>V</span>, <span class='ident'>Ticket</span><span class='op'>&gt;</span> {
+    <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>claim</span>(<span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='self'>self</span>, <span class='ident'>ticket</span>: <span class='ident'>Ticket</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span><span class='ident'>V</span>, <span class='ident'>ClaimError</span><span class='op'>&gt;</span> {
         <span class='kw'>if</span> <span class='ident'>ticket</span>.<span class='ident'>tag</span> <span class='op'>!=</span> <span class='self'>self</span>.<span class='ident'>tag</span> {
-            <span class='prelude-val'>Err</span>(<span class='ident'>ticket</span>)
+            <span class='prelude-val'>Err</span>(<span class='ident'>ClaimError</span> { <span class='ident'>ticket</span>: <span class='ident'>ticket</span>, <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>::<span class='ident'>WrongCoatCheck</span> })
         } <span class='kw'>else</span> {
             <span class='kw'>let</span> <span class='ident'>value</span> <span class='op'>=</span> <span class='self'>self</span>.<span class='ident'>data</span>[<span class='ident'>ticket</span>.<span class='ident'>index</span>].<span class='ident'>empty</span>(<span class='self'>self</span>.<span class='ident'>next_free</span>);
             <span class='self'>self</span>.<span class='ident'>next_free</span> <span class='op'>=</span> <span class='ident'>ticket</span>.<span class='ident'>index</span>;
@@ -1315,9 +1431,9 @@
     <span class='doccomment'>///</span>
     <span class='doccomment'>/// Returns `Ok(&amp;value)` if the ticket belongs to this `CoatCheck&lt;V&gt;`.</span>
     <span class='doccomment'>/// Returns `Err(())` if the ticket belongs to another `CoatCheck&lt;V&gt;`.</span>
-    <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>get</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>ticket</span>: <span class='kw-2'>&amp;</span><span class='ident'>Ticket</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='ident'>V</span>, ()<span class='op'>&gt;</span> {
+    <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>get</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>ticket</span>: <span class='kw-2'>&amp;</span><span class='ident'>Ticket</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='ident'>V</span>, <span class='ident'>AccessError</span><span class='op'>&gt;</span> {
         <span class='kw'>if</span> <span class='ident'>ticket</span>.<span class='ident'>tag</span> <span class='op'>!=</span> <span class='self'>self</span>.<span class='ident'>tag</span> {
-            <span class='prelude-val'>Err</span>(())
+            <span class='prelude-val'>Err</span>(<span class='ident'>AccessError</span> { <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>::<span class='ident'>WrongCoatCheck</span> })
         } <span class='kw'>else</span> {
             <span class='kw'>match</span> <span class='self'>self</span>.<span class='ident'>data</span>.<span class='ident'>index</span>(<span class='kw-2'>&amp;</span><span class='ident'>ticket</span>.<span class='ident'>index</span>) {
                 <span class='kw-2'>&amp;</span><span class='ident'>Full</span>(<span class='kw-2'>ref</span> <span class='ident'>v</span>) <span class='op'>=&gt;</span> <span class='prelude-val'>Ok</span>(<span class='ident'>v</span>),
@@ -1330,9 +1446,9 @@
     <span class='doccomment'>///</span>
     <span class='doccomment'>/// Returns `Ok(&amp;mut value)` if the ticket belongs to this `CoatCheck&lt;V&gt;`.</span>
     <span class='doccomment'>/// Returns `Err(())` if the ticket belongs to another `CoatCheck&lt;V&gt;`.</span>
-    <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>get_mut</span>(<span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='self'>self</span>, <span class='ident'>ticket</span>: <span class='kw-2'>&amp;</span><span class='ident'>Ticket</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>V</span>, ()<span class='op'>&gt;</span> {
+    <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>get_mut</span>(<span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='self'>self</span>, <span class='ident'>ticket</span>: <span class='kw-2'>&amp;</span><span class='ident'>Ticket</span>) <span class='op'>-&gt;</span> <span class='prelude-ty'>Result</span><span class='op'>&lt;</span><span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>V</span>, <span class='ident'>AccessError</span><span class='op'>&gt;</span> {
         <span class='kw'>if</span> <span class='ident'>ticket</span>.<span class='ident'>tag</span> <span class='op'>!=</span> <span class='self'>self</span>.<span class='ident'>tag</span> {
-            <span class='prelude-val'>Err</span>(())
+            <span class='prelude-val'>Err</span>(<span class='ident'>AccessError</span> { <span class='ident'>kind</span>: <span class='ident'>ErrorKind</span>::<span class='ident'>WrongCoatCheck</span> })
         } <span class='kw'>else</span> {
             <span class='kw'>match</span> <span class='self'>self</span>.<span class='ident'>data</span>.<span class='ident'>index_mut</span>(<span class='kw-2'>&amp;</span><span class='ident'>ticket</span>.<span class='ident'>index</span>) {
                 <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>Full</span>(<span class='kw-2'>ref</span> <span class='kw-2'>mut</span> <span class='ident'>v</span>) <span class='op'>=&gt;</span> <span class='prelude-val'>Ok</span>(<span class='ident'>v</span>),
